update lang&socket
